# garrett-discovery-document-prep-tool

./: .gitignore  Launch Garrett Discovery Document Prep Tool.vbs  README.md  analysis_summary.py  check_problematic.py  comprehensive_pdf_analysis.py  create_a4_gutter.py  create_a4_gutter_transparent.py  create_test_documents.py  detailed_pdf_analysis.py  final_pdf_processor.py  garrett-discovery-document-prep-tool_fresh_install.code-workspace  integration_test.py  landscape_test_document.docx  move_to_failures.py  pdf_analysis_results.json  pyproject.toml  pytest.ini  quick_check.py  quick_test.py  quick_test_annotations.py  rotate_pdf.py  run_app.py  setup.py  simple_normalization_test.py  vector_pdf_test.py  verify_all_rotations.py
distribution/: README.md  create_distributions.py
installation/: install_demo.py  install_simple.bat  requirements.txt
src/: bates_numbering.py  config.py  dependency_checker.py  document_processor.py  document_processor_refactored.py  error_handling.py  file_scanner.py  image_line_numbering.py  line_numbering.py  logger_manager.py  main.py  memory_manager.py  pdf_converter.py  pdf_orientation_detector.py  thread_safe_state.py  universal_line_numbering.py  vector_line_numbering.py
src/pipelines/: base_pipeline.py  native_pdf_pipeline.py  scan_image_pipeline.py  text_pipeline.py
tests/: conftest.py  requirements-test.txt
